styles/Dialog.module.scss
@import "~bootstrap/scss/bootstrap-utilities.scss";

.dialog {
  position: fixed;
  z-index: 10;
  top: 50%;
  left: 50%;
  max-height: 100vh;
  color: #000;

  :global .window {
    :global .title-bar,
    :global .window-body {
      cursor: default;
      user-select: none;
    }

    pre {
      overflow: auto;
      cursor: auto;
      user-select: text;
    }
  }

  @include media-breakpoint-down(sm) {
    width: calc(100% - 1.2rem);
  }
}

.veil {
  position: fixed;
  z-index: 9;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 15%);
}

